mlops-platform-triton/bootstrap/10-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    # NGINX
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

    # Access IP whitelist  ➜ restrict to corporate/home IPs
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"

    # TLS issued automatically by cert-manager
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.local                # replace with your FQDN
      secretName: argocd-tls          # name of TLS Secret to be created
  rules:
    - host: argocd.local              # same as above
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server   # default service name created by Helm
                port:
                  number: 443
